# recipes

./: Cargo.toml
entity/: Cargo.toml
entity/src/: ingredient.rs  ingredient_price.rs  lib.rs  prelude.rs  recipe.rs  recipe_ingredient.rs  unit.rs
server/: Cargo.toml
server/src/: api.rs  lib.rs  main.rs
server/src/api/: ingredient.rs  recipe.rs  unit.rs
