[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
axum = "0.6.15"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json" ] }
shuttle-shared-db = { version = "0.14.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.160", features = ["derive"] }
axum-macros = "0.3.7"
serde_json = "1.0.96"
thiserror = "1.0.40"
